syntax = "proto3";

package api;

service VmActions {
    rpc Ping(PingRequest) returns (PingResponse);
    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
    rpc GetDmesg(GetDmesgRequest) returns (GetDmesgResponse);
}


message PingRequest {}
message PingResponse {}
message ShutdownRequest {}
message ShutdownResponse {}
message GetDmesgRequest {}
message GetDmesgResponse {
    string text = 1;
}